tests/cases/smoke/invalid/class_pub_init_const.dp
class Fish {
    pub init const id: str
}
